<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLinear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="30dp"
            android:text="@string/firebase_crud_assignment"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/txtoperationsToperform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/create_login_update_delete"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLoogindetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/topLinear">

        <EditText
            android:id="@+id/edttxtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:hint="@string/enter_name" />

        <EditText
            android:id="@+id/edttxtcnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:maxLength="13"
            android:hint="@string/enter_cnic"
            android:autofillHints="no" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearLoogindetails">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/search"
            android:onClick="searchData"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/register"
            android:onClick="registerPage"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>